Weird z-fight during weight paint #63997

Closed
opened 2019-04-29 20:23:40 +02:00 by Jean Da Costa · 10 comments

System Information
Operating system: Windows 7
Graphics card: GTX 1050

Blender Version
a57fec986d
Worked: 2a79e34631

Short description of error
During weight paint, funky glitches happen.

Exact steps for others to reproduce the error
download attached .blend, paint over the weights then undo.

image.png
z-fight-weigth_paint.blend

**System Information** Operating system: Windows 7 Graphics card: GTX 1050 **Blender Version** a57fec986d2d Worked: 2a79e3463130 **Short description of error** During weight paint, funky glitches happen. **Exact steps for others to reproduce the error** download attached .blend, paint over the weights then undo. ![image.png](https://archive.blender.org/developer/F6992580/image.png) [z-fight-weigth_paint.blend](https://archive.blender.org/developer/F6992582/z-fight-weigth_paint.blend)
Author

Added subscriber: @jeacom

Added subscriber: @jeacom

#64064 was marked as duplicate of this issue

#64064 was marked as duplicate of this issue

Added subscriber: @crantisz

Added subscriber: @crantisz

Can confirm on Linux:

Снимок экрана от 2019-05-01 18-23-50.png

System Information
Operating system: Linux-4.15.0-47-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116

Blender Version
Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-04-30 22:49, hash: 480a09a92f

Can confirm on Linux: ![Снимок экрана от 2019-05-01 18-23-50.png](https://archive.blender.org/developer/F6999073/Снимок_экрана_от_2019-05-01_18-23-50.png) **System Information** Operating system: Linux-4.15.0-47-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.116 **Blender Version** Broken: version: 2.80 (sub 60), branch: blender2.7, commit date: 2019-04-30 22:49, hash: `480a09a92f`

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Clément Foucault was assigned by Sebastian Parborg 2019-05-02 11:02:19 +02:00

Thanks for providing dates when it worked! I've been able to bisect the commit that broke this d4827cfa81

Thanks for providing dates when it worked! I've been able to bisect the commit that broke this d4827cfa81

This issue was referenced by 95e052f830

This issue was referenced by 95e052f830807a89f36021b77638a3a5d0c01309

Added subscriber: @fclem

Added subscriber: @fclem

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @lastrodamo

Added subscriber: @lastrodamo
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63997
No description provided.