Fix T63997 Weird z-fight during weight paint

PBVH drawing was used even in weightpaint/vertexpaint because both uses
the sculpt session.