source/blender/draw/engines/eevee/eevee_materials.c
@@ -1617,7 +1617,7 @@ void EEVEE_materials_cache_populate(EEVEE_Data *vedata,
 
   const bool do_cull = (draw_ctx->v3d &&
                         (draw_ctx->v3d->shading.flag & V3D_SHADING_BACKFACE_CULLING));
-  const bool is_sculpt_mode = (ob->sculpt != NULL);
+  const bool is_sculpt_mode = DRW_object_use_pbvh_drawing(ob);
   /* For now just force fully shaded with eevee when supported. */
   const bool is_sculpt_mode_draw = ob->sculpt && ob->sculpt->pbvh &&
                                    BKE_pbvh_type(ob->sculpt->pbvh) != PBVH_FACES;
